--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,12 @@ typings/
 # dotenv environment variables file
 .env
 
+# JetBrain
+.idea/
+
+# Configuration
+config/
+package-lock.json
+
+# Auto generated PDF file
+README.pdf
